<resources>
    <string name="app_name">Hostel Management System</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- String for onBoarding scr een -->
    <string name="start_text_advice">By continuing on this application you agree to our Terms of Use and Privacy Policy</string>


    <string name="title_onboarding_1">Welcome to AnyHostel!</string>
    <string name="description_onboarding_1">Your one stop to any hostel work</string>

    <string name="title_onboarding_2">Location based attendance tracking</string>
    <string name="description_onboarding_2">Check in check out for a day by just one tap!</string>

    <string name="title_onboarding_3">Build a healthy community with our app</string>
    <string name="description_onboarding_3">Get answers to your grievances and leave requests </string>

    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="leave">Ask For Leave</string>
    <string name="full_name">Full Name</string>
    <string name="email">E-Mail</string>
    <string name="student_name">Student Name</string>
    <string name="about">About</string>
    <string name="attendance">Attendance</string>
    <string name="student_id">Student ID</string>
    <string name="room_allocated">Room Allocated</string>
    <string name="name">Name</string>

    <!--    Register-->
    <string name="open_email">Open email</string>
    <string name="register_alert">You have been registered for hostel room allocation. Once your registration is approved and a hostel room is allocated, You will be receiving your password for login.</string>
    <string name="logout">Logout</string>
    <string name="student">Students</string>
    <string name="allocation">Allocation</string>
    <string name="view_leave">View Leave</string>
    <string name="grievance">Grievance</string>
    <string name="notice">Notice</string>
    <string name="warden">Warden</string>
    <string name="send_notice">Send Notice</string>
    <string name="grievances">Grievances</string>

</resources>