<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/studentFragment"
        android:title="@string/student"
        android:icon="@drawable/students_image"/>
    <item
        android:id="@+id/allocationFragment"
        android:title="@string/allocation"
        android:icon="@drawable/allocation_image"/>
    <item
        android:id="@+id/viewLeaveFragment"
        android:title="@string/view_leave"
        android:icon="@drawable/view_leave_image"/>
    <item
        android:id="@+id/viewGrievanceFragment"
        android:title="@string/grievance"
        android:icon="@drawable/grievance_image"/>
    <item
        android:id="@+id/adminNoticeFragment2"
        android:title="@string/notice"
        android:icon="@drawable/notice_image"/>
</menu>