<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/adminDashboardFragment"
        android:title="@string/dashboard"
        android:icon="@drawable/dashboard_image"/>
    <item
        android:id="@+id/studentListFragment"
        android:title="@string/student"
        android:icon="@drawable/students_image"/>

    <item
        android:id="@+id/wardenListFragment"
        android:title="@string/warden"
        android:icon="@drawable/profile_image"/>
    <item
        android:id="@+id/viewGrievanceFragment"
        android:title = "@string/grievance"
        android:icon="@drawable/grievance_image"/>
    <item
        android:id="@+id/adminNoticeFragment"
        android:title="@string/notice"
        android:icon="@drawable/notice_image"/>

</menu>