<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/studentDashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/dashboard_image"/>
    <item
        android:id="@+id/studentProfileFragment"
        android:title="@string/profile"
        android:icon="@drawable/profile_image"/>
    <item
        android:id="@+id/studentLeaveFragment"
        android:title="@string/leave"
        android:icon="@drawable/view_leave_image"/>
    <item
        android:id="@+id/studentGrievanceFragment"
        android:icon="@drawable/grievance"
        android:title="@string/grievance" />
    <item
        android:id="@+id/studentDashboardFragment"
        android:icon="@drawable/dashboard_image"
        android:title="@string/dashboard" />

</menu>