<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".student.fragment.StudentProfileFragment"
    android:background="@drawable/primary_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateTint="@color/black"
            android:visibility="invisible" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/user_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/user"
            app:tint="@color/black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profile_username"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/user_image"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center|bottom"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/cario_color_dark"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="18sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform" />

        <TableRow
            android:id="@+id/profile_dashboard_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_username"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/room_allocated_layout"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profile_room_allocated"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textColor="@color/cario_color_dark" />

                <TextView
                    android:id="@+id/profile_room_allocated_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/room_allocated"
                    android:textColor="@color/cario_color_dark" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/student_id_layout"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profile_student_id"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textColor="@color/cario_color_dark" />

                <TextView
                    android:id="@+id/profile_student_id_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/student_id"
                    android:textColor="@color/cario_color_dark" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/attendanceLayout"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/profile_attendance"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="69%"
                    android:textColor="@color/cario_color_dark" />

                <TextView
                    android:id="@+id/profile_attendance_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/attendance"
                    android:textColor="@color/cario_color_dark" />

            </LinearLayout>

        </TableRow>

        <RelativeLayout
            android:id="@+id/personal_info_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/profile_dashboard_row">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/profile_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/about"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/cario_color_dark"
                android:textStyle="bold"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/profile_student_full_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_about"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/student_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/profile_student_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_student_full_name_text"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/profile_student_mail_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_student_full_name"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/email"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/profile_student_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_student_mail_text"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/profile_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_student_mail"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="State"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/profile_state_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_state"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/profile_district"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_state_text"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="District"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/profile_district_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_district"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform" />

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>